--- a/Sites/pedro.html
+++ b/Sites/pedro.html
@@ -12,9 +12,9 @@
     </head>
 
     <body>
-        <div><h1>23. Pedro Pires</h1></div>
+        <div><h1>23. Pedro Pinto</h1></div>
 
-        <img src="../Images/Pedro/Miniatura.jpg" alt="Pedro Pires">
+        <img src="../Images/Pedro/Miniatura.jpg" alt="Pedro Pinto">
     </body>
 
 </html>
