--- a/Sites/alexandre.html
+++ b/Sites/alexandre.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - Alexandre Grande</title>
     </head>
@@ -14,7 +14,7 @@
     <body>
         <div><h1>1. Alexandre Borges</h1></div>
 
-        <img src="../Images/Alexandre/Miniatura.jpg" alt="Alexandre Borges">
+        <img src="../images/alexandre/miniatura.jpg" alt="Alexandre Borges">
     </body>
 
 </html>
