--- a/Sites/bernardo.html
+++ b/Sites/bernardo.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - Bernardo Grande</title>
     </head>
@@ -14,7 +14,7 @@
     <body>
         <div><h1>2. Bernardo Martinho</h1></div>
 
-        <img src="../Images/Bernardo/Miniatura.jpg" alt="Bernardo Martinho">
+        <img src="../images/bernardo/miniatura.jpg" alt="Bernardo Martinho">
     </body>
 
 </html>
