--- a/Sites/francisco.html
+++ b/Sites/francisco.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - Francisco Grande</title>
     </head>
@@ -14,7 +14,7 @@
     <body>
         <div><h1>6. Francisco Caleiro</h1></div>
 
-        <img src="../Images/Francisco/Miniatura.jpg" alt="Francisco Caleiro">
+        <img src="../images/francisco/miniatura.jpg" alt="Francisco Caleiro">
     </body>
 
 </html>
