--- a/Sites/guilhermev.html
+++ b/Sites/guilhermev.html
@@ -6,15 +6,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - Guilherme V. Grande</title>
     </head>
 
     <body>
-        <div><h1>11. Guilherme Veigas</h1></div>
+        <div><h1>10. Guilherme Veigas</h1></div>
 
-        <img src="../Images/Guilherme V/Miniatura.jpg" alt="Guilherme Veigas">
+        <img src="../images/guilhermev/miniatura.jpg" alt="Guilherme Veigas">
     </body>
 
 </html>
