--- a/Sites/joaop.html
+++ b/Sites/joaop.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - João P. Grande</title>
     </head>
@@ -14,7 +14,7 @@
     <body>
         <div><h1>14. João Pereira</h1></div>
 
-        <img src="../Images/João P/Miniatura.jpg" alt="João Pereira">
+        <img src="../images/joaop/miniatura.jpg" alt="João Pereira">
     </body>
 
 </html>
