--- a/Sites/matilde.html
+++ b/Sites/matilde.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - Matilde Grande</title>
     </head>
@@ -14,7 +14,7 @@
     <body>
         <div><h1>18. Matilde Antão</h1></div>
 
-        <img src="../Images/Matilde/Miniatura.jpg" alt="Matilde Antão">
+        <img src="../images/matilde/miniatura.jpg" alt="Matilde Antão">
     </body>
 
 </html>
