--- a/Sites/milan.html
+++ b/Sites/milan.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - Milan Grande</title>
     </head>
@@ -14,7 +14,7 @@
     <body>
         <div><h1>21. Milan Geiantilal</h1></div>
 
-        <img src="../Images/Milan/Miniatura.jpg" alt="Milan Piedade">
+        <img src="../images/milan/miniatura.jpg" alt="Milan Geiantilal">
     </body>
 
 </html>
