--- a/Sites/ricardo.html
+++ b/Sites/ricardo.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - Ricardo Grande</title>
     </head>
@@ -14,7 +14,7 @@
     <body>
         <div><h1>24. Ricardo Piedade</h1></div>
 
-        <img src="../Images/Ricardo/Miniatura.jpg" alt="Ricardo Piedade">
+        <img src="../images/ricardo/miniatura.jpg" alt="Ricardo Piedade">
     </body>
 
 </html>
