--- a/Sites/daniel.html
+++ b/Sites/daniel.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - Daniel Grande</title>
     </head>
@@ -14,7 +14,7 @@
     <body>
         <div><h1>28. Daniel Ventura</h1></div>
 
-        <img src="../Images/Daniel/Miniatura.jpg" alt="Daniel Ventura">
+        <img src="../images/daniel/miniatura.jpg" alt="Daniel Ventura">
     </body>
 
 </html>
