--- a/Sites/david.html
+++ b/Sites/david.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - David Grande</title>
     </head>
@@ -14,7 +14,7 @@
     <body>
         <div><h1>3. David Alves</h1></div>
 
-        <img src="../Images/David/Miniatura.jpg" alt="David Alves">
+        <img src="../images/david/miniatura.jpg" alt="David Alves">
     </body>
 
 </html>
