--- a/Sites/filipe.html
+++ b/Sites/filipe.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - Filipe Grande</title>
     </head>
@@ -14,7 +14,7 @@
     <body>
         <div><h1>5. Filipe Costa</h1></div>
 
-        <img src="../Images/Filipe/Miniatura.jpg" alt="Filipe Costa">
+        <img src="../images/filipe/miniatura.jpg" alt="Filipe Costa">
     </body>
 
 </html>
