--- a/Sites/gabriel.html
+++ b/Sites/gabriel.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - Gabriel Grande</title>
     </head>
@@ -14,7 +14,7 @@
     <body>
         <div><h1>7. Gabriel Santos</h1></div>
 
-        <img src="../Images/Gabriel/Miniatura.jpg" alt="Gabriel Santos">
+        <img src="../images/gabriel/miniatura.jpg" alt="Gabriel Santos">
     </body>
 
 </html>
