--- a/Sites/guilhermes.html
+++ b/Sites/guilhermes.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - Guilherme S. Grande</title>
     </head>
@@ -14,7 +14,7 @@
     <body>
         <div><h1>9. Guilherme Santos</h1></div>
 
-        <img src="../Images/Guilherme S/Miniatura.jpg" alt="Guilherme Santos">
+        <img src="../images/guilhermes/miniatura.jpg" alt="Guilherme Santos">
     </body>
 
 </html>
