--- a/Sites/guilhermet.html
+++ b/Sites/guilhermet.html
@@ -6,15 +6,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - Guilherme T. Grande</title>
     </head>
 
     <body>
-        <div><h1>10. Guilherme Teixeira</h1></div>
+        <div><h1>11. Guilherme Teixeira</h1></div>
 
-        <img src="../Images/Guilherme T/Miniatura.jpg" alt="Guilherme Teixeira">
+        <img src="../images/guilhermet/miniatura.jpg" alt="Guilherme Teixeira">
     </body>
 
 </html>
