--- a/Sites/hugo.html
+++ b/Sites/hugo.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - Hugo Grande</title>
     </head>
@@ -14,7 +14,7 @@
     <body>
         <div><h1>12. Hugo Pereira</h1></div>
 
-        <img src="../Images/Hugo/Miniatura.jpg" alt="Hugo Pereira">
+        <img src="../images/hugo/miniatura.jpg" alt="Hugo Pereira">
     </body>
 
 </html>
