--- a/Sites/joaoa.html
+++ b/Sites/joaoa.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - João A. Grande</title>
     </head>
@@ -14,7 +14,7 @@
     <body>
         <div><h1>13. João Agostinho</h1></div>
 
-        <img src="../Images/João A/Miniatura.jpg" alt="João Agostinho">
+        <img src="../images/joaoa/miniatura.jpg" alt="João Agostinho">
     </body>
 
 </html>
