--- a/Sites/jose.html
+++ b/Sites/jose.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - José Grande</title>
     </head>
@@ -14,7 +14,7 @@
     <body>
         <div><h1>15. José Durão</h1></div>
 
-        <img src="../Images/José/Miniatura.jpg" alt="José Durão">
+        <img src="../images/josé/miniatura.jpg" alt="José Durão">
     </body>
 
 </html>
