--- a/Sites/larissa.html
+++ b/Sites/larissa.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - Larissa Grande</title>
     </head>
@@ -14,7 +14,7 @@
     <body>
         <div><h1>16. Larissa Silva</h1></div>
 
-        <img src="../Images/Larissa/Miniatura.jpg" alt="Larissa Silva">
+        <img src="../images/larissa/miniatura.jpg" alt="Larissa Silva">
     </body>
 
 </html>
