--- a/Sites/lourenco.html
+++ b/Sites/lourenco.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - Lourenço Grande</title>
     </head>
@@ -14,7 +14,7 @@
     <body>
         <div><h1>17. Lourenço Maximino</h1></div>
 
-        <img src="../Images/Lourenço/Miniatura.jpg" alt="Lourenço Maximino">
+        <img src="../images/lourenco/miniatura.jpg" alt="Lourenço Maximino">
     </body>
 
 </html>
