--- a/Sites/mauro.html
+++ b/Sites/mauro.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - Mauro Grande</title>
     </head>
@@ -14,7 +14,7 @@
     <body>
         <div><h1>19. Mauro Figueiredo</h1></div>
 
-        <img src="../Images/Mauro/Miniatura.jpg" alt="Mauro Figueiredo">
+        <img src="../images/mauro/miniatura.jpg" alt="Mauro Figueiredo">
     </body>
 
 </html>
