--- a/Sites/miguel.html
+++ b/Sites/miguel.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - Miguel Grande</title>
     </head>
@@ -14,7 +14,7 @@
     <body>
         <div><h1>20. Miguel Mendes</h1></div>
 
-        <img src="../Images/Miguel/Miniatura.jpg" alt="Miguel Mendes">
+        <img src="../images/miguel/miniatura.jpg" alt="Miguel Mendes">
     </body>
 
 </html>
