--- a/Sites/paulo.html
+++ b/Sites/paulo.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - Paulo Grande</title>
     </head>
@@ -14,7 +14,7 @@
     <body>
         <div><h1>22. Paulo Pires</h1></div>
 
-        <img src="../Images/Paulo/Miniatura.jpg" alt="Paulo Pires">
+        <img src="../images/paulo/miniatura.jpg" alt="Paulo Pires">
     </body>
 
 </html>
