--- a/Sites/pedro.html
+++ b/Sites/pedro.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - Pedro Grande</title>
     </head>
@@ -14,7 +14,7 @@
     <body>
         <div><h1>23. Pedro Pinto</h1></div>
 
-        <img src="../Images/Pedro/Miniatura.jpg" alt="Pedro Pinto">
+        <img src="../images/pedro/miniatura.jpg" alt="Pedro Pinto">
     </body>
 
 </html>
