--- a/Sites/tiago.html
+++ b/Sites/tiago.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - Tiago Grande</title>
     </head>
@@ -14,7 +14,7 @@
     <body>
         <div><h1>25. Tiago Neves</h1></div>
 
-        <img src="../Images/Tiago/Miniatura.jpg" alt="Tiago Neves">
+        <img src="../images/tiago/miniatura.jpg" alt="Tiago Neves">
     </body>
 
 </html>
