--- a/Sites/vitor.html
+++ b/Sites/vitor.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="sites.css">
+        <link rel="stylesheet" href="../css/sites.css">
 
         <title>PT05 - Vitor Grande</title>
     </head>
@@ -14,7 +14,7 @@
     <body>
         <div><h1>27. Vitor Vassalo</h1></div>
 
-        <img src="../Images/Vitor/Miniatura.jpg" alt="Vitor Vassalo">
+        <img src="../images/vitor/miniatura.jpg" alt="Vitor Vassalo">
     </body>
 
 </html>
