--- a/index.html
+++ b/index.html
@@ -19,262 +19,262 @@
 
             <tr>
                 <td>
-                    <a class="img-link" href="Sites/alexandre.html" target="_blank">
-                        <img src="Images/Alexandre/Miniatura.jpg" alt="Foto Alexandre Borges">
+                    <a class="img-link" href="sites/alexandre.html" target="_blank">
+                        <img src="images/alexandre/miniatura.jpg" alt="Foto Alexandre Borges">
                     </a>
 
                     <p style="color: black;">1. Alexandre Borges</p>
-                    <div><a href="Sites/alexandre.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/alexandre.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
                 <td>
-                    <a class="img-link" href="Sites/bernardo.html" target="_blank">
-                        <img src="Images/Bernardo/Miniatura.jpg" alt="Foto Bernardo Martinho">
+                    <a class="img-link" href="sites/bernardo.html" target="_blank">
+                        <img src="images/bernardo/miniatura.jpg" alt="Foto Bernardo Martinho">
                     </a>
 
                     <p style="color: black;">2. Bernardo Martinho</p>
-                    <div><a href="Sites/bernardo.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/bernardo.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
                 <td>
-                    <a class="img-link" href="Sites/david.html" target="_blank">
-                        <img src="Images/David/Miniatura.jpg" alt="Foto David Alves">
+                    <a class="img-link" href="sites/david.html" target="_blank">
+                        <img src="images/david/miniatura.jpg" alt="Foto David Alves">
                     </a>
 
                     <p style="color: rgb(0, 183, 255);">3. David Alves</p>
-                    <div><a href="Sites/david.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/david.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
             </tr>
 
             <tr>
                 <td>
-                    <a class="img-link" href="Sites/diogo.html" target="_blank">
-                        <img src="Images/Diogo/Miniatura.jpg" alt="Foto Diogo Gama">
+                    <a class="img-link" href="sites/diogo.html" target="_blank">
+                        <img src="images/diogo/miniatura.jpg" alt="Foto Diogo Gama">
                     </a>
 
                     <p style="color: black;">4. Diogo Gama</p>
-                    <div><a href="Sites/diogo.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/diogo.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
                 <td>
-                    <a class="img-link" href="Sites/filipe.html" target="_blank">
-                        <img src="Images/Filipe/Miniatura.jpg" alt="Foto Filipe Costa">
+                    <a class="img-link" href="sites/filipe.html" target="_blank">
+                        <img src="images/filipe/miniatura.jpg" alt="Foto Filipe Costa">
                     </a>
 
                     <p style="color: black;">5. Filipe Costa</p>
-                    <div><a href="Sites/filipe.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/filipe.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
                 <td>
-                    <a class="img-link" href="Sites/francisco.html" target="_blank">
-                        <img src="Images/Francisco/Miniatura.jpg" alt="Foto Francisco Caleiro">
+                    <a class="img-link" href="sites/francisco.html" target="_blank">
+                        <img src="images/francisco/miniatura.jpg" alt="Foto Francisco Caleiro">
                     </a>
 
                     <p style="color: black;">6. Francisco Caleiro</p>
-                    <div><a href="Sites/francisco.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/francisco.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
             </tr>
 
             <tr>
                 <td>
-                    <a class="img-link" href="Sites/gabriel.html" target="_blank">
-                        <img src="Images/Gabriel/Miniatura.jpg" alt="Foto Gabriel Santos">
+                    <a class="img-link" href="sites/gabriel.html" target="_blank">
+                        <img src="images/gabriel/miniatura.jpg" alt="Foto Gabriel Santos">
                     </a>
 
                     <p style="color: black;">7. Gabriel Santos</p>
-                    <div><a href="Sites/gabriel.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/gabriel.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
                 <td>
-                    <a class="img-link" href="Sites/goncalo.html" target="_blank">
-                        <img src="Images/Gonçalo/Miniatura.jpg" alt="Foto Gonçalo Pereira">
+                    <a class="img-link" href="sites/goncalo.html" target="_blank">
+                        <img src="images/goncalo/miniatura.jpg" alt="Foto Gonçalo Pereira">
                     </a>
 
                     <p style="color: black;">8. Gonçalo Pereira</p>
-                    <div><a href="Sites/goncalo.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/goncalo.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
                 <td>
-                    <a class="img-link" href="Sites/guilhermes.html" target="_blank">
-                        <img src="Images/Guilherme S/Miniatura.jpg" alt="Foto Guilherme Santos">
+                    <a class="img-link" href="sites/guilhermes.html" target="_blank">
+                        <img src="images/guilhermes/miniatura.jpg" alt="Foto Guilherme Santos">
                     </a>
 
                     <p style="color: black;">9. Guilherme Santos</p>
-                    <div><a href="Sites/guilhermes.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/guilhermes.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
             </tr>
 
             <tr>
                 <td>
+                    <a class="img-link" href="sites/guilhermev.html" target="_blank">
+                        <img src="images/guilhermev/miniatura.jpg" alt="Foto Guilherme Veigas">
+                    </a>
+
+                    <p style="color: black;">10. Guilherme Veigas</p>
+                    <div><a href="sites/guilhermev.html" target="_blank"><button>Imagem Grande</button></a></div>
+                </td>
+
+                <td>
                     <a class="img-link" href="Sites/guilhermet.html" target="_blank">
-                        <img src="Images/Guilherme T/Miniatura.jpg" alt="Foto Guilherme Teixeira">
+                        <img src="images/guilhermet/miniatura.jpg" alt="Foto Guilherme Teixeira">
                     </a>
 
-                    <p style="color: black;">10. Guilherme Teixeira</p>
-                    <div><a href="Sites/guilhermet.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <p style="color: black;">11. Guilherme Teixeira</p>
+                    <div><a href="sites/guilhermet.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
                 <td>
-                    <a class="img-link" href="Sites/guilhermev.html" target="_blank">
-                        <img src="Images/Guilherme V/Miniatura.jpg" alt="Foto Guilherme Veigas">
-                    </a>
-
-                    <p style="color: black;">11. Guilherme Veigas</p>
-                    <div><a href="Sites/guilhermev.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-
-                <td>
-                    <a class="img-link" href="Sites/hugo.html" target="_blank">
-                        <img src="Images/Hugo/Miniatura.jpg" alt="Foto Hugo Pereira">
+                    <a class="img-link" href="sites/hugo.html" target="_blank">
+                        <img src="images/hugo/miniatura.jpg" alt="Foto Hugo Pereira">
                     </a>
 
                     <p style="color: black;">12. Hugo Pereira</p>
-                    <div><a href="Sites/hugo.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/hugo.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
             </tr>
 
             <tr>
                 <td>
-                    <a class="img-link" href="Sites/joaoa.html" target="_blank">
-                        <img src="Images/João A/Miniatura.jpg" alt="Foto João Agostinho">
+                    <a class="img-link" href="sites/joaoa.html" target="_blank">
+                        <img src="images/joaoa/miniatura.jpg" alt="Foto João Agostinho">
                     </a>
 
                     <p style="color: black;">13. João Agostinho</p>
-                    <div><a href="Sites/joaoa.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/joaoa.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
                 <td>
-                    <a class="img-link" href="Sites/joaop.html" target="_blank">
-                        <img src="Images/João P/Miniatura.jpg" alt="Foto João Pereira">
+                    <a class="img-link" href="sites/joaop.html" target="_blank">
+                        <img src="images/joaop/miniatura.jpg" alt="Foto João Pereira">
                     </a>
 
                     <p style="color: black;">14. João Pereira</p>
-                    <div><a href="Sites/joaop.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/joaop.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
                 <td>
-                    <a class="img-link" href="Sites/jose.html" target="_blank">
-                        <img src="Images/José/Miniatura.jpg" alt="Foto José Durão">
+                    <a class="img-link" href="sites/jose.html" target="_blank">
+                        <img src="images/jose/miniatura.jpg" alt="Foto José Durão">
                     </a>
 
                     <p style="color: black;">15. José Durão</p>
-                    <div><a href="Sites/jose.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/jose.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
             </tr>
 
             <tr>
                 <td>
-                    <a class="img-link" href="Sites/larissa.html" target="_blank">
-                        <img src="Images/Larissa/Miniatura.jpg" alt="Foto Larissa Silva">
+                    <a class="img-link" href="sites/larissa.html" target="_blank">
+                        <img src="images/Larissa/miniatura.jpg" alt="Foto Larissa Silva">
                     </a>
 
                     <p style="color: black;">16. Larissa Silva</p>
-                    <div><a href="Sites/larissa.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/larissa.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
                 <td>
-                    <a class="img-link" href="Sites/lourenco.html" target="_blank">
-                        <img src="Images/Lourenço/Miniatura.jpg" alt="Foto Lourenço Maximino">
+                    <a class="img-link" href="sites/lourenco.html" target="_blank">
+                        <img src="images/lourenco/miniatura.jpg" alt="Foto Lourenço Maximino">
                     </a>
 
                     <p style="color: black;">17. Lourenço Maximino</p>
-                    <div><a href="Sites/lourenco.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/lourenco.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
                 <td>
-                    <a class="img-link" href="Sites/matilde.html" target="_blank">
-                        <img src="Images/Matilde/Miniatura.jpg" alt="Foto Matilde Antão">
+                    <a class="img-link" href="sites/matilde.html" target="_blank">
+                        <img src="images/matilde/miniatura.jpg" alt="Foto Matilde Antão">
                     </a>
 
                     <p style="color: black;">18. Matilde Antão</p>
-                    <div><a href="Sites/matilde.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/matilde.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
             </tr>
 
             <tr>
                 <td>
-                    <a class="img-link" href="Sites/mauro.html" target="_blank">
-                        <img src="Images/Mauro/Miniatura.jpg" alt="Foto Mauro Figueiredo">
+                    <a class="img-link" href="sites/mauro.html" target="_blank">
+                        <img src="images/mauro/miniatura.jpg" alt="Foto Mauro Figueiredo">
                     </a>
 
                     <p style="color: black;">19. Mauro Figueiredo</p>
-                    <div><a href="Sites/mauro.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/mauro.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
                 <td>
-                    <a class="img-link" href="Sites/miguel.html" target="_blank">
-                        <img src="Images/Miguel/Miniatura.jpg" alt="Foto Miguel Mendes">
+                    <a class="img-link" href="sites/miguel.html" target="_blank">
+                        <img src="images/miguel/miniatura.jpg" alt="Foto Miguel Mendes">
                     </a>
 
                     <p style="color: black;">20. Miguel Mendes</p>
-                    <div><a href="Sites/miguel.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/miguel.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
                 <td>
-                    <a class="img-link" href="Sites/milan.html" target="_blank">
-                        <img src="Images/Milan/Miniatura.jpg" alt="Foto Milan Geiantilal">
+                    <a class="img-link" href="sites/milan.html" target="_blank">
+                        <img src="images/milan/miniatura.jpg" alt="Foto Milan Geiantilal">
                     </a>
 
                     <p style="color: black;">21. Milan Geiantilal</p>
-                    <div><a href="Sites/milan.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/milan.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
             </tr>
 
             <tr>
                 <td>
-                    <a class="img-link" href="Sites/paulo.html" target="_blank">
-                        <img src="Images/Paulo/Miniatura.jpg" alt="Foto Paulo Pires">
+                    <a class="img-link" href="sites/paulo.html" target="_blank">
+                        <img src="images/paulo/miniatura.jpg" alt="Foto Paulo Pires">
                     </a>
 
                     <p style="color: black;">22. Paulo Pires</p>
-                    <div><a href="Sites/paulo.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/paulo.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
                 <td>
-                    <a class="img-link" href="Sites/pedro.html" target="_blank">
-                        <img src="Images/Pedro/Miniatura.jpg" alt="Foto Pedro Pinto">
+                    <a class="img-link" href="sites/pedro.html" target="_blank">
+                        <img src="images/pedro/miniatura.jpg" alt="Foto Pedro Pinto">
                     </a>
 
                     <p style="color: black;">23. Pedro Pinto</p>
-                    <div><a href="Sites/pedro.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/pedro.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
                 <td>
-                    <a class="img-link" href="Sites/ricardo.html" target="_blank">
-                        <img src="Images/Ricardo/Miniatura.jpg" alt="Foto Ricardo Piedade">
+                    <a class="img-link" href="sites/ricardo.html" target="_blank">
+                        <img src="images/ricardo/miniatura.jpg" alt="Foto Ricardo Piedade">
                     </a>
 
                     <p style="color: black;">24. Ricardo Piedade</p>
-                    <div><a href="Sites/ricardo.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/ricardo.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
             </tr>
 
             <tr>
                 <td>
-                    <a class="img-link" href="Sites/tiago.html" target="_blank">
-                        <img src="Images/Tiago/Miniatura.jpg" alt="Foto Tiago Neves">
+                    <a class="img-link" href="sites/tiago.html" target="_blank">
+                        <img src="images/tiago/miniatura.jpg" alt="Foto Tiago Neves">
                     </a>
 
                     <p style="color: black;">25. Tiago Neves</p>
-                    <div><a href="Sites/tiago.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/tiago.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
                 <td>
-                    <a class="img-link" href="Sites/vitor.html" target="_blank">
-                        <img src="Images/Vitor/Miniatura.jpg" alt="Foto Vitor Vassalo">
+                    <a class="img-link" href="sites/vitor.html" target="_blank">
+                        <img src="images/vitor/miniatura.jpg" alt="Foto Vitor Vassalo">
                     </a>
 
                     <p style="color: black;">27. Vitor Vassalo</p>
-                    <div><a href="Sites/vitor.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/vitor.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
                 <td>
-                    <a class="img-link" href="Sites/daniel.html" target="_blank">
-                        <img src="Images/Daniel/Miniatura.jpg" alt="Foto Daniel Ventura">
+                    <a class="img-link" href="sites/daniel.html" target="_blank">
+                        <img src="images/daniel/miniatura.jpg" alt="Foto Daniel Ventura">
                     </a>
 
                     <p style="color: black;">28. Daniel Ventura</p>
-                    <div><a href="Sites/daniel.html" target="_blank"><button>Imagem Grande</button></a></div>
+                    <div><a href="sites/daniel.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
             </tr>
         </table>
