--- a/index.html
+++ b/index.html
@@ -1,282 +1,30 @@
 <!DOCTYPE html>
 
 <html lang="pt">
-
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/pt05.css">
 
-        <title>PT05 - Tabela</title>
+        <title>PT05 - Home Page</title>
     </head>
 
     <body>
-        <table>
-            <tr>
-                <th colspan="3">Alunos do 12º12ª</th>
-            </tr>
+        <h1>PT05 - RICARDO PIEDADE</h1>
 
-            <tr>
-                <td>
-                    <a class="img-link" href="sites/alexandre.html" target="_blank">
-                        <img src="images/alexandre/miniatura.jpg" alt="Foto Alexandre Borges">
-                    </a>
+        <p>AQUI PODES TER ACESSO A TODOS OS FICHEIROS HTML QUE SÃO PEDIDOS NO PT05</p>
 
-                    <p style="color: black;">1. Alexandre Borges</p>
-                    <div><a href="sites/alexandre.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
+        <div id="passo4">
+            <a href="testes/1documento.html" target="_blank"><button>Passo 4 - HTML Document</button></a>
+            <a href="testes/2headings.html" target="_blank"><button>Passo 4 - HTML Headings</button></a>
+            <a href="testes/3paragraphs.html" target="_blank"><button>Passo 4 - HTML Paragraphs</button></a>
+            <a href="testes/4links.html" target="_blank"><button>Passo 4 - HTML Links</button></a>
+            <a href="testes/5images.html" target="_blank"><button>Passo 4 - HTML Images</button></a>
+        </div>
 
-                <td>
-                    <a class="img-link" href="sites/bernardo.html" target="_blank">
-                        <img src="images/bernardo/miniatura.jpg" alt="Foto Bernardo Martinho">
-                    </a>
-
-                    <p style="color: black;">2. Bernardo Martinho</p>
-                    <div><a href="sites/bernardo.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-
-                <td>
-                    <a class="img-link" href="sites/david.html" target="_blank">
-                        <img src="images/david/miniatura.jpg" alt="Foto David Alves">
-                    </a>
-
-                    <p style="color: rgb(0, 183, 255);">3. David Alves</p>
-                    <div><a href="sites/david.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-            </tr>
-
-            <tr>
-                <td>
-                    <a class="img-link" href="sites/diogo.html" target="_blank">
-                        <img src="images/diogo/miniatura.jpg" alt="Foto Diogo Gama">
-                    </a>
-
-                    <p style="color: black;">4. Diogo Gama</p>
-                    <div><a href="sites/diogo.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-
-                <td>
-                    <a class="img-link" href="sites/filipe.html" target="_blank">
-                        <img src="images/filipe/miniatura.jpg" alt="Foto Filipe Costa">
-                    </a>
-
-                    <p style="color: black;">5. Filipe Costa</p>
-                    <div><a href="sites/filipe.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-
-                <td>
-                    <a class="img-link" href="sites/francisco.html" target="_blank">
-                        <img src="images/francisco/miniatura.jpg" alt="Foto Francisco Caleiro">
-                    </a>
-
-                    <p style="color: black;">6. Francisco Caleiro</p>
-                    <div><a href="sites/francisco.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-            </tr>
-
-            <tr>
-                <td>
-                    <a class="img-link" href="sites/gabriel.html" target="_blank">
-                        <img src="images/gabriel/miniatura.jpg" alt="Foto Gabriel Santos">
-                    </a>
-
-                    <p style="color: black;">7. Gabriel Santos</p>
-                    <div><a href="sites/gabriel.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-
-                <td>
-                    <a class="img-link" href="sites/goncalo.html" target="_blank">
-                        <img src="images/goncalo/miniatura.jpg" alt="Foto Gonçalo Pereira">
-                    </a>
-
-                    <p style="color: black;">8. Gonçalo Pereira</p>
-                    <div><a href="sites/goncalo.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-
-                <td>
-                    <a class="img-link" href="sites/guilhermes.html" target="_blank">
-                        <img src="images/guilhermes/miniatura.jpg" alt="Foto Guilherme Santos">
-                    </a>
-
-                    <p style="color: black;">9. Guilherme Santos</p>
-                    <div><a href="sites/guilhermes.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-            </tr>
-
-            <tr>
-                <td>
-                    <a class="img-link" href="sites/guilhermev.html" target="_blank">
-                        <img src="images/guilhermev/miniatura.jpg" alt="Foto Guilherme Veigas">
-                    </a>
-
-                    <p style="color: black;">10. Guilherme Veigas</p>
-                    <div><a href="sites/guilhermev.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-
-                <td>
-                    <a class="img-link" href="Sites/guilhermet.html" target="_blank">
-                        <img src="images/guilhermet/miniatura.jpg" alt="Foto Guilherme Teixeira">
-                    </a>
-
-                    <p style="color: black;">11. Guilherme Teixeira</p>
-                    <div><a href="sites/guilhermet.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-
-                <td>
-                    <a class="img-link" href="sites/hugo.html" target="_blank">
-                        <img src="images/hugo/miniatura.jpg" alt="Foto Hugo Pereira">
-                    </a>
-
-                    <p style="color: black;">12. Hugo Pereira</p>
-                    <div><a href="sites/hugo.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-            </tr>
-
-            <tr>
-                <td>
-                    <a class="img-link" href="sites/joaoa.html" target="_blank">
-                        <img src="images/joaoa/miniatura.jpg" alt="Foto João Agostinho">
-                    </a>
-
-                    <p style="color: black;">13. João Agostinho</p>
-                    <div><a href="sites/joaoa.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-
-                <td>
-                    <a class="img-link" href="sites/joaop.html" target="_blank">
-                        <img src="images/joaop/miniatura.jpg" alt="Foto João Pereira">
-                    </a>
-
-                    <p style="color: black;">14. João Pereira</p>
-                    <div><a href="sites/joaop.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-
-                <td>
-                    <a class="img-link" href="sites/jose.html" target="_blank">
-                        <img src="images/jose/miniatura.jpg" alt="Foto José Durão">
-                    </a>
-
-                    <p style="color: black;">15. José Durão</p>
-                    <div><a href="sites/jose.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-            </tr>
-
-            <tr>
-                <td>
-                    <a class="img-link" href="sites/larissa.html" target="_blank">
-                        <img src="images/Larissa/miniatura.jpg" alt="Foto Larissa Silva">
-                    </a>
-
-                    <p style="color: black;">16. Larissa Silva</p>
-                    <div><a href="sites/larissa.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-
-                <td>
-                    <a class="img-link" href="sites/lourenco.html" target="_blank">
-                        <img src="images/lourenco/miniatura.jpg" alt="Foto Lourenço Maximino">
-                    </a>
-
-                    <p style="color: black;">17. Lourenço Maximino</p>
-                    <div><a href="sites/lourenco.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-
-                <td>
-                    <a class="img-link" href="sites/matilde.html" target="_blank">
-                        <img src="images/matilde/miniatura.jpg" alt="Foto Matilde Antão">
-                    </a>
-
-                    <p style="color: black;">18. Matilde Antão</p>
-                    <div><a href="sites/matilde.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-            </tr>
-
-            <tr>
-                <td>
-                    <a class="img-link" href="sites/mauro.html" target="_blank">
-                        <img src="images/mauro/miniatura.jpg" alt="Foto Mauro Figueiredo">
-                    </a>
-
-                    <p style="color: black;">19. Mauro Figueiredo</p>
-                    <div><a href="sites/mauro.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-
-                <td>
-                    <a class="img-link" href="sites/miguel.html" target="_blank">
-                        <img src="images/miguel/miniatura.jpg" alt="Foto Miguel Mendes">
-                    </a>
-
-                    <p style="color: black;">20. Miguel Mendes</p>
-                    <div><a href="sites/miguel.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-
-                <td>
-                    <a class="img-link" href="sites/milan.html" target="_blank">
-                        <img src="images/milan/miniatura.jpg" alt="Foto Milan Geiantilal">
-                    </a>
-
-                    <p style="color: black;">21. Milan Geiantilal</p>
-                    <div><a href="sites/milan.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-            </tr>
-
-            <tr>
-                <td>
-                    <a class="img-link" href="sites/paulo.html" target="_blank">
-                        <img src="images/paulo/miniatura.jpg" alt="Foto Paulo Pires">
-                    </a>
-
-                    <p style="color: black;">22. Paulo Pires</p>
-                    <div><a href="sites/paulo.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-
-                <td>
-                    <a class="img-link" href="sites/pedro.html" target="_blank">
-                        <img src="images/pedro/miniatura.jpg" alt="Foto Pedro Pinto">
-                    </a>
-
-                    <p style="color: black;">23. Pedro Pinto</p>
-                    <div><a href="sites/pedro.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-
-                <td>
-                    <a class="img-link" href="sites/ricardo.html" target="_blank">
-                        <img src="images/ricardo/miniatura.jpg" alt="Foto Ricardo Piedade">
-                    </a>
-
-                    <p style="color: black;">24. Ricardo Piedade</p>
-                    <div><a href="sites/ricardo.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-            </tr>
-
-            <tr>
-                <td>
-                    <a class="img-link" href="sites/tiago.html" target="_blank">
-                        <img src="images/tiago/miniatura.jpg" alt="Foto Tiago Neves">
-                    </a>
-
-                    <p style="color: black;">25. Tiago Neves</p>
-                    <div><a href="sites/tiago.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-
-                <td>
-                    <a class="img-link" href="sites/vitor.html" target="_blank">
-                        <img src="images/vitor/miniatura.jpg" alt="Foto Vitor Vassalo">
-                    </a>
-
-                    <p style="color: black;">27. Vitor Vassalo</p>
-                    <div><a href="sites/vitor.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-
-                <td>
-                    <a class="img-link" href="sites/daniel.html" target="_blank">
-                        <img src="images/daniel/miniatura.jpg" alt="Foto Daniel Ventura">
-                    </a>
-
-                    <p style="color: black;">28. Daniel Ventura</p>
-                    <div><a href="sites/daniel.html" target="_blank"><button>Imagem Grande</button></a></div>
-                </td>
-            </tr>
-        </table>
+        <div id="tabela">
+            <a href="sites/tabela.html" target="_blank"><button>Passo 5 - Tabela</button></a>
+        </div>
     </body>
 </html>
