--- a/sites/tabela.html
+++ b/sites/tabela.html
@@ -23,7 +23,7 @@
                         <img src="../images/alexandre/miniatura.jpg" alt="Foto Alexandre Borges">
                     </a>
 
-                    <p style="color: black;">1. Alexandre Borges</p>
+                    <p style="color: rgb(50, 0, 0);">1. Alexandre Borges</p>
                     <div><a href="alexandre.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
@@ -32,7 +32,7 @@
                         <img src="../images/bernardo/miniatura.jpg" alt="Foto Bernardo Martinho">
                     </a>
 
-                    <p style="color: black;">2. Bernardo Martinho</p>
+                    <p style="color: rgb(100, 0, 0);">2. Bernardo Martinho</p>
                     <div><a href="bernardo.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
@@ -52,7 +52,7 @@
                         <img src="../images/diogo/miniatura.jpg" alt="Foto Diogo Gama">
                     </a>
 
-                    <p style="color: black;">4. Diogo Gama</p>
+                    <p style="color: rgb(150, 0, 0);">4. Diogo Gama</p>
                     <div><a href="diogo.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
@@ -61,7 +61,7 @@
                         <img src="../images/filipe/miniatura.jpg" alt="Foto Filipe Costa">
                     </a>
 
-                    <p style="color: black;">5. Filipe Costa</p>
+                    <p style="color: rgb(255, 100, 0);">5. Filipe Costa</p>
                     <div><a href="filipe.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
@@ -70,7 +70,7 @@
                         <img src="../images/francisco/miniatura.jpg" alt="Foto Francisco Caleiro">
                     </a>
 
-                    <p style="color: black;">6. Francisco Caleiro</p>
+                    <p style="color: rgb(255, 150, 0);">6. Francisco Caleiro</p>
                     <div><a href="francisco.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
             </tr>
@@ -81,7 +81,7 @@
                         <img src="../images/gabriel/miniatura.jpg" alt="Foto Gabriel Santos">
                     </a>
 
-                    <p style="color: black;">7. Gabriel Santos</p>
+                    <p style="color: rgb(255, 200, 0);">7. Gabriel Santos</p>
                     <div><a href="gabriel.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
@@ -90,7 +90,7 @@
                         <img src="../images/goncalo/miniatura.jpg" alt="Foto Gonçalo Pereira">
                     </a>
 
-                    <p style="color: black;">8. Gonçalo Pereira</p>
+                    <p style="color: rgb(255, 255, 0);">8. Gonçalo Pereira</p>
                     <div><a href="goncalo.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
@@ -99,7 +99,7 @@
                         <img src="../images/guilhermes/miniatura.jpg" alt="Foto Guilherme Santos">
                     </a>
 
-                    <p style="color: black;">9. Guilherme Santos</p>
+                    <p style="color: rgb(255, 0, 100);">9. Guilherme Santos</p>
                     <div><a href="guilhermes.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
             </tr>
@@ -110,7 +110,7 @@
                         <img src="../images/guilhermev/miniatura.jpg" alt="Foto Guilherme Veigas">
                     </a>
 
-                    <p style="color: black;">10. Guilherme Veigas</p>
+                    <p style="color: rgb(255, 0, 150);">10. Guilherme Veigas</p>
                     <div><a href="guilhermev.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
@@ -119,7 +119,7 @@
                         <img src="../images/guilhermet/miniatura.jpg" alt="Foto Guilherme Teixeira">
                     </a>
 
-                    <p style="color: black;">11. Guilherme Teixeira</p>
+                    <p style="color: rgb(100, 0, 255);">11. Guilherme Teixeira</p>
                     <div><a href="guilhermet.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
@@ -128,7 +128,7 @@
                         <img src="../images/hugo/miniatura.jpg" alt="Foto Hugo Pereira">
                     </a>
 
-                    <p style="color: black;">12. Hugo Pereira</p>
+                    <p style="color: rgb(100, 255, 100);">12. Hugo Pereira</p>
                     <div><a href="hugo.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
             </tr>
@@ -139,7 +139,7 @@
                         <img src="../images/joaoa/miniatura.jpg" alt="Foto João Agostinho">
                     </a>
 
-                    <p style="color: black;">13. João Agostinho</p>
+                    <p style="color: rgb(100, 100, 100);">13. João Agostinho</p>
                     <div><a href="joaoa.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
@@ -148,7 +148,7 @@
                         <img src="../images/joaop/miniatura.jpg" alt="Foto João Pereira">
                     </a>
 
-                    <p style="color: black;">14. João Pereira</p>
+                    <p style="color: rgb(50, 150, 150);">14. João Pereira</p>
                     <div><a href="joaop.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
@@ -157,7 +157,7 @@
                         <img src="../images/jose/miniatura.jpg" alt="Foto José Durão">
                     </a>
 
-                    <p style="color: black;">15. José Durão</p>
+                    <p style="color: rgb(150, 150, 50);">15. José Durão</p>
                     <div><a href="jose.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
             </tr>
@@ -168,7 +168,7 @@
                         <img src="../images/larissa/miniatura.jpg" alt="Foto Larissa Silva">
                     </a>
 
-                    <p style="color: black;">16. Larissa Silva</p>
+                    <p style="color: rgb(50, 150, 50);">16. Larissa Silva</p>
                     <div><a href="larissa.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
@@ -177,7 +177,7 @@
                         <img src="../images/lourenco/miniatura.jpg" alt="Foto Lourenço Maximino">
                     </a>
 
-                    <p style="color: black;">17. Lourenço Maximino</p>
+                    <p style="color: rgb(100, 150, 200);">17. Lourenço Maximino</p>
                     <div><a href="lourenco.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
@@ -186,7 +186,7 @@
                         <img src="../images/matilde/miniatura.jpg" alt="Foto Matilde Antão">
                     </a>
 
-                    <p style="color: black;">18. Matilde Antão</p>
+                    <p style="color: rgb(80, 0, 80);">18. Matilde Antão</p>
                     <div><a href="matilde.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
             </tr>
@@ -197,7 +197,7 @@
                         <img src="../images/mauro/miniatura.jpg" alt="Foto Mauro Figueiredo">
                     </a>
 
-                    <p style="color: black;">19. Mauro Figueiredo</p>
+                    <p style="color: rgb(150, 150, 200);">19. Mauro Figueiredo</p>
                     <div><a href="mauro.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
@@ -206,7 +206,7 @@
                         <img src="../images/miguel/miniatura.jpg" alt="Foto Miguel Mendes">
                     </a>
 
-                    <p style="color: black;">20. Miguel Mendes</p>
+                    <p style="color: rgb(50, 200, 150);">20. Miguel Mendes</p>
                     <div><a href="miguel.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
@@ -215,7 +215,7 @@
                         <img src="../images/milan/miniatura.jpg" alt="Foto Milan Geiantilal">
                     </a>
 
-                    <p style="color: black;">21. Milan Geiantilal</p>
+                    <p style="color: rgb(250, 150, 150);">21. Milan Geiantilal</p>
                     <div><a href="milan.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
             </tr>
@@ -226,7 +226,7 @@
                         <img src="../images/paulo/miniatura.jpg" alt="Foto Paulo Pires">
                     </a>
 
-                    <p style="color: black;">22. Paulo Pires</p>
+                    <p style="color: rgb(250, 150, 250);">22. Paulo Pires</p>
                     <div><a href="paulo.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
@@ -235,7 +235,7 @@
                         <img src="../images/pedro/miniatura.jpg" alt="Foto Pedro Pinto">
                     </a>
 
-                    <p style="color: black;">23. Pedro Pinto</p>
+                    <p style="color: rgb(250, 100, 100);">23. Pedro Pinto</p>
                     <div><a href="pedro.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
@@ -244,7 +244,7 @@
                         <img src="../images/ricardo/miniatura.jpg" alt="Foto Ricardo Piedade">
                     </a>
 
-                    <p style="color: black;">24. Ricardo Piedade</p>
+                    <p style="color: rgb(250, 20, 0);">24. Ricardo Piedade</p>
                     <div><a href="ricardo.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
             </tr>
@@ -255,7 +255,7 @@
                         <img src="../images/tiago/miniatura.jpg" alt="Foto Tiago Neves">
                     </a>
 
-                    <p style="color: black;">25. Tiago Neves</p>
+                    <p style="color: rgb(10, 50, 100);">25. Tiago Neves</p>
                     <div><a href="tiago.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
@@ -264,7 +264,7 @@
                         <img src="../images/vitor/miniatura.jpg" alt="Foto Vitor Vassalo">
                     </a>
 
-                    <p style="color: black;">27. Vitor Vassalo</p>
+                    <p style="color: rgb(5, 0, 150);">27. Vitor Vassalo</p>
                     <div><a href="vitor.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
 
@@ -273,7 +273,7 @@
                         <img src="../images/daniel/miniatura.jpg" alt="Foto Daniel Ventura">
                     </a>
 
-                    <p style="color: black;">28. Daniel Ventura</p>
+                    <p style="color: rgb(50, 100, 250);">28. Daniel Ventura</p>
                     <div><a href="daniel.html" target="_blank"><button>Imagem Grande</button></a></div>
                 </td>
             </tr>
